--- a/Programavimo_Praktika_2/App.config
+++ b/Programavimo_Praktika_2/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="Programavimo_Praktika_2.Properties.Settings.Praktika2ConnectionString"
+            connectionString="Data Source=DESKTOP-8SF0T6G;Initial Catalog=Praktika2;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
