--- a/Programavimo_Praktika_2/Programavimo_Praktika_2.csproj
+++ b/Programavimo_Praktika_2/Programavimo_Praktika_2.csproj
@@ -33,6 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -59,11 +60,19 @@
       <DependentUpon>AssignLectures.cs</DependentUpon>
     </Compile>
     <Compile Include="Backend\Models\ExTag.cs" />
+    <Compile Include="Backend\Models\GroupLectures.cs" />
     <Compile Include="Backend\Models\Groups.cs" />
     <Compile Include="Backend\Models\LecturedBy.cs" />
     <Compile Include="Backend\Models\Lectures.cs" />
+    <Compile Include="Backend\Models\Marks.cs" />
     <Compile Include="Backend\Models\UserInfo.cs" />
     <Compile Include="Backend\Repositories\SqlHelper.cs" />
+    <Compile Include="GroupAssignment.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GroupAssignment.Designer.cs">
+      <DependentUpon>GroupAssignment.cs</DependentUpon>
+    </Compile>
     <Compile Include="LecturerControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -114,6 +123,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Praktika2DataSet3.xsd</DependentUpon>
     </Compile>
+    <Compile Include="Praktika2DataSet4.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Praktika2DataSet4.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Register.cs">
@@ -140,17 +154,14 @@
     <Compile Include="StudentMarks.Designer.cs">
       <DependentUpon>StudentMarks.cs</DependentUpon>
     </Compile>
-    <Compile Include="StudentMarksUpload.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="StudentMarksUpload.Designer.cs">
-      <DependentUpon>StudentMarksUpload.cs</DependentUpon>
-    </Compile>
     <EmbeddedResource Include="AdminControl.resx">
       <DependentUpon>AdminControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="AssignLectures.resx">
       <DependentUpon>AssignLectures.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GroupAssignment.resx">
+      <DependentUpon>GroupAssignment.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="LecturerControl.resx">
       <DependentUpon>LecturerControl.cs</DependentUpon>
@@ -187,9 +198,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="StudentMarks.resx">
       <DependentUpon>StudentMarks.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="StudentMarksUpload.resx">
-      <DependentUpon>StudentMarksUpload.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Praktika2DataSet.xsc">
       <DependentUpon>Praktika2DataSet.xsd</DependentUpon>
@@ -234,6 +242,17 @@
     </None>
     <None Include="Praktika2DataSet3.xss">
       <DependentUpon>Praktika2DataSet3.xsd</DependentUpon>
+    </None>
+    <None Include="Praktika2DataSet4.xsc">
+      <DependentUpon>Praktika2DataSet4.xsd</DependentUpon>
+    </None>
+    <None Include="Praktika2DataSet4.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>Praktika2DataSet4.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Praktika2DataSet4.xss">
+      <DependentUpon>Praktika2DataSet4.xsd</DependentUpon>
     </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
